fix: calendar z-index

--- a/src/styles/Calendar.css
+++ b/src/styles/Calendar.css
@@ -5,6 +5,7 @@
   border: 1px solid #a0a096;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.125em;
+  z-index: 5;
 }
 .react-calendar--doubleView {
   width: 700px;
